--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     classpath 'me.tatarka:gradle-retrolambda:3.2.4'
     classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
     classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.5.0"
+    classpath 'com.github.nrudenko:gradle-android-cq-plugin:0.1+'
   }
 }
 
@@ -40,6 +41,7 @@ buildtimetracker {
 }
 
 apply plugin: 'io.fabric'
+apply plugin: 'android-cq'
 //gradle dependencyUpdates -Drevision=release
 
 android {
