--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ android:
   - android-sdk-license-.+
 before_script:
 - git submodule update --init
-script: ./gradlew clean build checkstyle check
+script: ./gradlew clean build check
 deploy:
   provider: releases
   api_key:
