--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ android {
   dexOptions {
     javaMaxHeapSize "4g"
   }
+  testOptions {
+    unitTests.returnDefaultValues = true
+  }
   defaultConfig {
     minSdkVersion 15
     targetSdkVersion 23
@@ -239,6 +242,7 @@ dependencies {
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.assertj:assertj-core:1.7.0'
+  testCompile "org.mockito:mockito-core:1.+"
 
   compile 'com.linkedin.android.spyglass:spyglass:1.3.0'
   compile 'com.jakewharton:process-phoenix:1.0.2'
