--- a/app/build.gradle
+++ b/app/build.gradle
@@ -243,7 +243,9 @@ dependencies {
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.assertj:assertj-core:1.7.0'
-  testCompile "org.mockito:mockito-core:1.+"
+  testCompile "org.mockito:mockito-core:1.10.19"
+
+  compile 'com.karumi:dexter:2.2.1'
 
   compile 'com.linkedin.android.spyglass:spyglass:1.3.0'
   compile 'com.jakewharton:process-phoenix:1.0.2'
