--- a/app/build.gradle
+++ b/app/build.gradle
@@ -209,7 +209,8 @@ dependencies {
     transitive = true
   }
   compile 'com.mikepenz:actionitembadge:3.1.1@aar'
-  compile 'com.mikepenz:octicons-typeface:3.0.1@aar'
+  compile 'com.mikepenz:octicons-typeface:3.2.0.1@aar'
+  compile 'com.mikepenz:community-material-typeface:1.3.41.1@aar'
   compile 'com.mikepenz:google-material-typeface:1.2.0@aar'
   compile 'com.squareup:otto:1.3.8'
   compile 'com.squareup.dagger:dagger:1.2.2'
