--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
       tools:node="remove"
       />
 
+  <permission android:name="${applicationId}.permission.C2D_MESSAGE"
+              android:protectionLevel="signature" />
+  <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE" />
+
+  <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+
   <application
       android:name=".GitskariosApplication"
       android:allowBackup="true"
@@ -198,6 +204,34 @@
         android:name="com.google.android.gms.version"
         android:value="@integer/google_play_services_version"
         />
+
+    <!-- GCM -->
+
+    <receiver
+        android:name="com.google.android.gms.gcm.GcmReceiver"
+        android:exported="true"
+        android:permission="com.google.android.c2dm.permission.SEND" >
+      <intent-filter>
+        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+        <category android:name="${applicationId}" />
+      </intent-filter>
+    </receiver>
+    <service
+        android:name=".gcm.GitskariosGcmListenerService"
+        android:exported="false" >
+      <intent-filter>
+        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+      </intent-filter>
+    </service>
+    <service
+        android:name=".gcm.GitskariosInstanceIDListenerService"
+        android:exported="false">
+      <intent-filter>
+        <action android:name="com.google.android.gms.iid.InstanceID" />
+      </intent-filter>
+    </service>
+
+
 
   </application>
 
