--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,7 @@ android {
       buildConfigField "String", "CLIENT_CALLBACK", "\"" + getGHCallback(false) + "\""
     }
     release {
+      debuggable true
       minifyEnabled false
       if (signingConfigs.playStore != null) {
         signingConfig signingConfigs.playStore
