--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,12 @@
       tools:node="remove"
       />
 
-  <permission android:name="${applicationId}.permission.C2D_MESSAGE"
-              android:protectionLevel="signature" />
-  <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE" />
+  <permission
+      android:name="${applicationId}.permission.C2D_MESSAGE"
+      android:protectionLevel="signature"
+      />
+
+  <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE"/>
 
   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 
@@ -210,27 +213,41 @@
     <receiver
         android:name="com.google.android.gms.gcm.GcmReceiver"
         android:exported="true"
-        android:permission="com.google.android.c2dm.permission.SEND" >
+        android:permission="com.google.android.c2dm.permission.SEND"
+        >
       <intent-filter>
-        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-        <category android:name="${applicationId}" />
+        <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+        <category android:name="${applicationId}"/>
       </intent-filter>
     </receiver>
+
+    <!-- [START gcm_listener] -->
     <service
         android:name=".gcm.GitskariosGcmListenerService"
-        android:exported="false" >
+        android:exported="false"
+        >
       <intent-filter>
-        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+        <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
       </intent-filter>
     </service>
+    <!-- [END gcm_listener] -->
+    <!-- [START instanceId_listener] -->
     <service
         android:name=".gcm.GitskariosInstanceIDListenerService"
-        android:exported="false">
-      <intent-filter>
-        <action android:name="com.google.android.gms.iid.InstanceID" />
-      </intent-filter>
+        android:exported="false"
+        >
 
+      <intent-filter>
+        <action android:name="com.google.android.gms.iid.InstanceID"/>
+      </intent-filter>
     </service>
+
+    <!-- [END instanceId_listener] -->
+
+    <service
+        android:name=".gcm.GitskariosRegistrationService"
+        android:exported="false"
+        />
 
     <service android:name=".account.GetNotificationsService"/>
 
