--- a/app/build.gradle
+++ b/app/build.gradle
@@ -194,11 +194,11 @@ dependencies {
   compile 'com.google.android.gms:play-services:8.4.0'
   compile 'com.google.android.gms:play-services-analytics:8.4.0'
 
-  compile 'com.android.support:design:23.1.1'
-  compile 'com.android.support:appcompat-v7:23.1.1'
-  compile 'com.android.support:palette-v7:23.1.1'
-  compile 'com.android.support:recyclerview-v7:23.1.1'
-  compile 'com.android.support:cardview-v7:23.1.1'
+  compile 'com.android.support:design:23.2.0'
+  compile 'com.android.support:appcompat-v7:23.2.0'
+  compile 'com.android.support:palette-v7:23.2.0'
+  compile 'com.android.support:recyclerview-v7:23.2.0'
+  compile 'com.android.support:cardview-v7:23.2.0'
   compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
   compile 'se.emilsjolander:stickylistheaders:2.7.0'
   compile 'com.nineoldandroids:library:2.4.0'
@@ -206,7 +206,7 @@ dependencies {
   compile('com.mikepenz:aboutlibraries:5.2.2@aar') {
     transitive = true
   }
-  compile('com.mikepenz:materialdrawer:4.6.4@aar') {
+  compile('com.mikepenz:materialdrawer:5.1.5@aar') {
     transitive = true
   }
   compile 'com.mikepenz:actionitembadge:3.1.1@aar'
@@ -253,6 +253,7 @@ dependencies {
   compile 'com.jakewharton:process-phoenix:1.0.2'
 
   compile 'com.github.alorma:timelineview:2.2.1'
+  compile 'com.roughike:bottom-bar:1.+'
 
   compile 'com.squareup.retrofit2:retrofit:2.0.0'
   compile 'com.squareup.retrofit2:converter-gson:2.0.0'
