--- a/app/build.gradle
+++ b/app/build.gradle
@@ -259,6 +259,10 @@ dependencies {
   compile 'com.squareup.retrofit2:converter-gson:2.0.0'
 
   compile 'nl.littlerobots.rxlint:rxlint:1.0'
+
+  compile ('com.github.ZieIony:NaturalDateFormat:-SNAPSHOT') {
+    exclude group: "joda-time"
+  }
 }
 
 apply plugin: 'com.google.gms.google-services'
