--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -152,6 +152,7 @@
     <activity android:name=".ui.activity.PullRequestCommitsActivity"/>
     <activity android:name=".ui.activity.PullRequestFilesActivity"/>
     <activity android:name=".ui.activity.ForksActivity"/>
+    <activity android:name=".ui.activity.issue.IssueMilestoneActivity"/>
     <activity
         android:name=".ui.activity.ContentEditorActivity"
         android:windowSoftInputMode="adjustPan"
