--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -154,6 +154,7 @@
     <activity android:name=".ui.activity.ForksActivity"/>
     <activity android:name=".ui.activity.issue.IssueMilestoneActivity"/>
     <activity android:name=".ui.activity.issue.IssueLabelsActivity"/>
+    <activity android:name=".ui.activity.issue.IssueAssigneesActivity"/>
     <activity
         android:name=".ui.activity.ContentEditorActivity"
         android:windowSoftInputMode="adjustPan"
