--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
 script: ./gradlew build -PdisablePreDex
 deploy:
 - provider: script
-  script: ./gradlew publishApkGithubRelease
+  script: ./gradlew publishGithubRelease
   skip_cleanup: true
   on:
     tags: true
